--- a/pages/pag-padrao.html
+++ b/pages/pag-padrao.html
@@ -1,66 +1,82 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="../assets/icons/icone-aba.png" type="image/png">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="../assets/icons/icone-aba.png" type="image/png" />
     <title>REDMat</title>
-    <link rel="stylesheet" href="../assets/css/reset.css">
-    <link rel="stylesheet" href="../assets/css/header.css">
-    <link rel="stylesheet" href="../assets/css/main.css">
-    <link rel="stylesheet" href="../assets/css/footer.css">
+    <link rel="stylesheet" href="../assets/css/reset.css" />
+    <link rel="stylesheet" href="../assets/css/header.css" />
+    <link rel="stylesheet" href="../assets/css/main.css" />
+    <link rel="stylesheet" href="../assets/css/footer.css" />
     <!-- Colocar aqui o .css da página -->
     <!-- <link rel="stylesheet" href="../assets/css/pag-padrao.css"> -->
-</head>
+  </head>
 
-<body>
-
+  <body>
     <header></header>
-        
+
     <main>
-        <section class="sobre">
-            <h2>Título</h2>
-            <p>Texto</p>
-            <div class="apenas-desktop">
-                <h2>Título (aparece apenas no desktop)</h2>
-                <p>Texto (aparece apenas no desktop)</p>
+      <section class="sobre">
+        <h2>Título</h2>
+        <p>Texto</p>
+        <div class="apenas-desktop">
+          <h2>Título (aparece apenas no desktop)</h2>
+          <p>Texto (aparece apenas no desktop)</p>
+        </div>
+      </section>
+      <section class="content">
+        <section id="">
+          <!-- colocar um id para ser chamado e rolas a página até aqui-->
+          <h2>Título do produto</h2>
+          <h5>Monitores:</h5>
+          <h6>Data: --/----</h6>
+          <div class="recurso-container">
+            <div>
+              <img src="../assets/img/img-padrao.bmp" alt="Imagem Padrão" />
+              <!-- colocar caminho da imagem e alt-->
+              <div class="recurso-box">
+                <p>Texto medio sobre o produto.</p>
+                <p>Textos longos contornam a imagem</p>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Veritatis, nobis cumque ullam placeat ipsam ea eius
+                  reprehenderit libero sit repellendus molestiae? Earum quos
+                  quisquam veniam quae sequi ducimus aut alias? Lorem ipsum
+                  dolor sit amet consectetur adipisicing elit. Maiores
+                  accusantium similique totam quae, magnam corrupti laudantium
+                  aliquam doloribus deserunt debitis tempora eius
+                  necessitatibus, voluptate at. Inventore incidunt nisi eius
+                  quidem.
+                </p>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Repellat harum rem, esse laudantium earum at qui fuga cum
+                  vitae, sit ipsa laborum! Natus corporis, perferendis
+                  exercitationem culpa illo optio molestiae.
+                </p>
+              </div>
             </div>
+          </div>
         </section>
-        <section class="content">
 
-            <section id=""> <!-- colocar um id para ser chamado e rolas a página até aqui-->
-                <h2>Título do produto</h2>
-                <h5>Monitores:</h5>
-                <h6>Data: --/----</h6>
-                <div class="recurso-container">
-                    <div>
-                        <img src="../assets/img/img-padrao.bmp" alt="Imagem Padrão"> <!-- colocar caminho da imagem e alt-->
-                        <div class="recurso-descricao">
-                            <p>Texto medio sobre o produto.</p>
-                            <p>Textos longos contornam a imagem</p>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, nobis cumque ullam placeat ipsam ea eius reprehenderit libero sit repellendus molestiae? Earum quos quisquam veniam quae sequi ducimus aut alias? Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores accusantium similique totam quae, magnam corrupti laudantium aliquam doloribus deserunt debitis tempora eius necessitatibus, voluptate at. Inventore incidunt nisi eius quidem.</p>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat harum rem, esse laudantium earum at qui fuga cum vitae, sit ipsa laborum! Natus corporis, perferendis exercitationem culpa illo optio molestiae.</p>
-                        </div>
-                    </div>
-                </div>
-            </section>
-
-            <section id=""> <!-- colocar um id para ser chamado e rolas a página até aqui-->
-                <h2>Título do produto</h2>
-                <h5>Monitores:</h5>
-                <h6>Data: --/----</h6>
-                <div class="recurso-container">
-                    <div>
-                        <img src="../assets/img/img-padrao.bmp" alt="Imagem Padrão"> <!-- colocar caminho da imagem e alt-->
-                        <div class="recurso-descricao">
-                            <p>Texto curto sobre o produto.</p>
-                            <p>Texto curto fica em baixo.</p>
-                        </div>
-                    </div>
-                </div>
-            </section>
-
+        <section id="">
+          <!-- colocar um id para ser chamado e rolas a página até aqui-->
+          <h2>Título do produto</h2>
+          <h5>Monitores:</h5>
+          <h6>Data: --/----</h6>
+          <div class="recurso-container">
+            <div>
+              <img src="../assets/img/img-padrao.bmp" alt="Imagem Padrão" />
+              <!-- colocar caminho da imagem e alt-->
+              <div class="recurso-box">
+                <p>Texto curto sobre o produto.</p>
+                <p>Texto curto fica em baixo.</p>
+              </div>
+            </div>
+          </div>
         </section>
+      </section>
     </main>
 
     <footer></footer>
@@ -68,7 +84,5 @@
     <script src="../assets/js/insere-header.js"></script>
     <script src="../assets/js/menu.js"></script>
     <script src="../assets/js/insere-footer.js"></script>
-
-</body>
-
+  </body>
 </html>
