--- a/pages/recursos.html
+++ b/pages/recursos.html
@@ -19,17 +19,21 @@
     <main>
 
         <section class="sobre">
-            <h1>Nossos Recursos <span style="overflow-wrap: break-word; hyphens: auto;">Computacionais</span></h1>
+            <h1>Recursos <span style="overflow-wrap: break-word; hyphens: auto;">Computacionais</span></h1>
             <p class="revisar">
-                Os Recursos Computacionais REDMat são Applets e plataformas que utilizam tecnologia digital para oferecer suporte ao processo educacional. Esses recursos têm o objetivo de enriquecer a experiência de aprendizado, proporcionar maior acessibilidade, interatividade e flexibilidade aos estudantes. 
+                    Os Recursos Computacionais REDMat são Applets e plataformas que utilizam tecnologia digital para oferecer suporte ao processo educacional. Esses recursos têm o objetivo de enriquecer a experiência de aprendizado, proporcionar maior acessibilidade, interatividade e flexibilidade aos estudantes. 
             </p>
-            <!-- <h2>Importância dos Recursos Digitais</h2> -->
-            <p class="revisar">
-                A integração efetiva de recursos computacionais na educação moderna desempenha um grande papel no aprimoramento da experiência de aprendizado. Ferramentas online, softwares educativos e plataformas interativas oferecem um ambiente dinâmico e adaptável, proporcionando acesso fácil a informações diversificadas.
-            </p>
-            <p class="revisar">
-                A acessibilidade a recursos online também promove a aprendizagem colaborativa e proporciona flexibilidade no estudo, preparando os estudantes para enfrentar desafios matemáticos avançados com confiança e competência. Essa abordagem inovadora não apenas enriquece o processo de aprendizado, mas também prepara os alunos para uma aplicação prática e significativa dos conceitos matemáticos em diversas áreas.
-            </p>
+            <div class="apenas-desktop">
+                <!-- <h2>Importância dos Recursos Digitais</h2> -->
+                <p class="revisar">
+                    A integração efetiva de recursos computacionais na educação moderna desempenha um grande papel no aprimoramento da experiência de aprendizado. Ferramentas online, softwares educativos e plataformas interativas oferecem um ambiente dinâmico e adaptável, proporcionando acesso fácil a informações diversificadas.
+                </p>
+                <p class="revisar">
+                    A acessibilidade a recursos online também promove a aprendizagem colaborativa e proporciona flexibilidade no estudo, preparando os estudantes para enfrentar desafios matemáticos avançados com confiança e competência. Essa abordagem inovadora não apenas enriquece o processo de aprendizado, mas também prepara os alunos para uma aplicação prática e significativa dos conceitos matemáticos em diversas áreas.
+                </p>
+
+            </div>
+
         </section>
 
         <section class="content">
@@ -65,10 +69,7 @@
                 <hr>
                 <div class="recurso-container">
                     <h3>Propriedades de Funções Trigonométricas</h3>
-                    <p class="comentario">Devemos deixar o monitor, orientador e ano aqui? </p><br>
-                    <h5>Monitor: Gabriel Domingues</h5>
-                    <h5> Orientador: Begoña Alarcon</h5>
-                    <h6>Ano: 2023</h6>
+                    <!-- <p class="comentario">Devemos deixar o monitor, orientador e ano aqui? </p><br> -->
                     <div class="recurso-content">
                         <div class="recurso-box">
                             <div> <!-- div importante para manter o float na imagem -->
@@ -77,6 +78,9 @@
                                 <img src="../assets/icons/youtube.png" alt="logo do youtube" class="logo">
                                 </a>
                                 <div class="recurso-descricao">
+                                    <h5>Monitor: Gabriel Domingues</h5>
+                                    <h5> Orientador: Begoña Alarcon</h5>
+                                    <h6>Ano: 2023</h6>
                                     <p>Playlist no youtube dos vídeos que demonstram as propriedadas das funções trigonométricas</p>
                                     <!-- <p>A playlist disponibilizada no YouTube é composta por vídeos que detalham de maneira visual e informativa as propriedades fascinantes das funções trigonométricas. Cada vídeo é cuidadosamente projetado para oferecer uma compreensão clara e prática desses conceitos matemáticos essenciais.</p> -->
                                     <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, pariatur! Hic quaerat explicabo ab sint similique, repellat aut dolorum odio, consequuntur fugit perspiciatis, adipisci libero commodi harum veniam facilis unde!</p> -->
@@ -91,6 +95,9 @@
                                     <img src="../assets/icons/site-icone.png" alt="logo de site" class="logo">
                                 </a>
                                 <div class="recurso-descricao">
+                                    <h5>Monitor: Gabriel Domingues</h5>
+                                    <h5> Orientador: Begoña Alarcon</h5>
+                                    <h6>Ano: 2023</h6>
                                     <p>Site em formato de quizz como uma atividade interativa para o aluno aprimorar seus conhecimentos sobre as propriedadas das funções trigonométricas</p>
                                     <!-- <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti voluptas, consequatur nam maxime eos pariatur atque perferendis qui velit. Rem eveniet commodi deserunt sunt praesentium corporis facere minus quas voluptates! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur libero vero, rem ipsam nam veritatis non deleniti quis cum aspernatur, at neque sequi odit fuga consectetur, adipisci consequatur similique expedita. Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem nisi dolore, error dolorum hic ex ut quia cum ipsam consectetur dignissimos totam mollitia aut. Quidem magnam nulla molestiae distinctio. Quia?</p> -->
                                     <!-- <p> O site interativo em formato de quiz foi projetado para proporcionar uma atividade envolvente que permitirá aos alunos aprimorar seus conhecimentos sobre as propriedades das funções trigonométricas. Esta plataforma oferece uma abordagem dinâmica e prática, permitindo que os alunos testem e solidifiquem sua compreensão dos conceitos trigonométricos.</p> -->
