Reestruturação dos livros eletrônicos e dos projetos de ensino

--- a/pages/proj-ensino.html
+++ b/pages/proj-ensino.html
@@ -17,45 +17,35 @@
 
     <main>
       <section class="sobre">
-        <div class="apenas-desktop">
-          <h1>O que são os projetos de ensino</h1>
+          <h1>Projetos de Ensino</h1>
           <p class="revisar">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid
-            ipsam laudantium dolore culpa tempora? Quam quos quae magni soluta
-            ab incidunt veniam, voluptatem hic corporis assumenda maiores atque
-            labore consequuntur!
+            Um texto descrevendo o que são os projetos. (Esta parte aparece em desktops e celulares)
           </p>
-        </div>
+          <span class="apenas-desktop">
+            <p>
+              (Esta parte aparece apenas em desktops.) <br>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corrupti adipisci dolorum, aspernatur animi in culpa cumque accusamus asperiores veritatis illo quod similique qui quaerat, laborum placeat? Laudantium sit ullam fuga!
+            </p>
+          </span>
       </section>
 
       <section class="content">
-        <h1>Projetos de Ensino</h1>
-        <p class="revisar">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate
-          cum praesentium harum nesciunt quas, atque accusamus ad quae ducimus
-          sint corrupti tempore enim. Explicabo nam, atque eum reiciendis quas
-          asperiores.
-        </p>
-        <hr />
 
         <p class="comentario">
           Revisar se a ordem está correta. Foi colocado do mais novo para o mais
-          antigo
+          antigo. Colocar na ordem também no menu e na home.
         </p>
 
         <section id="fcg">
           <div class="recurso-container">
-            <h3>FCG (2023--)</h3>
-            <!-- <h5>Monitores:</h5> -->
-            <!-- <h6>Data: --/----</h6> -->
-            <div class="recurso-box">
-              <div>
-                <!-- div importante para manter o float na imagem-->
-                <a href="">
-                  <p class="comentario">colocar link na imagem e no título</p>
-
-                  <img src="../assets/img/img-padrao.bmp" alt="FCG (2023--)" />
-                </a>
+            <a href="">
+              <h3>FCG (2023--)</h3>
+            </a>
+            <h5>Monitor(es):</h5>
+            <h5>Orientador(es):</h5>
+            <h6>Ano: ----<h6>
+            <!-- <div class="recurso-box"> -->
+              <!-- <div> -->
                 <p class="revisar">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Officiis saepe provident mollitia? Tempora mollitia id libero
@@ -72,29 +62,33 @@
                   Dignissimos ipsam repudiandae porro sunt explicabo cum magni
                   culpa, vero repellendus.
                 </p>
-                <p class="comentario" style="position: absolute">
-                  Fazer um texto incluindo nome do monitor, orientador (e ano?
-                  já está no título)
-                </p>
-              </div>
-            </div>
+                <!-- <p class="comentario" style="position: absolute"> -->
+                  <!-- Fazer um texto incluindo nome do monitor, orientador (e ano? -->
+                  <!-- já está no título) -->
+                <!-- </p> -->
+              <!-- </div> -->
+            <!-- </div> -->
           </div>
         </section>
         <hr />
 
         <section id="manim">
           <div class="recurso-container">
-            <h3>Recursos Computacionais com Python (2023)</h3>
+            <a href="">
+              <p class="comentario">adcionar link no título quando estiver pronto</p>
+              <h3>Recursos Computacionais com Python (2023)</h3>
+            </a>
             <h5>Monitor: Gabriel Domingues</h5>
-            <h6>Data: 2023</h6>
-            <div class="recurso-box">
-              <div>
-                <a href="">
-                  <img
-                    src="../assets/img/python-logo.jpg"
-                    alt="Animação feita com Manim"
-                  />
-                </a>
+            <h5>Orientador:</h5>
+            <h6>Ano: 2023</h6>
+            <!-- <div class="recurso-box"> -->
+              <!-- <div> -->
+                <!-- <a href=""> -->
+                  <!-- <img -->
+                    <!-- src="../assets/img/python-logo.jpg" -->
+                    <!-- alt="Animação feita com Manim" -->
+                  <!-- /> -->
+                <!-- </a> -->
                 <p>
                   Ao longo do ano, foi desenvolvido um projeto empregando Python
                   e novas tecnologias com o intuito de explorar, de maneira
@@ -105,34 +99,37 @@
                   dinâmicos e recursos visuais para ilustrar as propriedades das
                   funções trigonométricas
                 </p>
-                <p class="comentario" style="position: absolute">
-                  Quando os tutoriais de Manim estiverem pronto o link da
-                  playlist será colocado nessa imagem
-                </p>
+                <!-- <p class="comentario" style="position: absolute"> -->
+                  <!-- Quando os tutoriais de Manim estiverem pronto o link da -->
+                  <!-- playlist será colocado nessa imagem -->
+                <!-- </p> -->
 
                 <!-- <p>Além disso, todo o conteúdo foi consolidado em um site interativo, oferecendo aos alunos a oportunidade de testar e aprimorar seus conhecimentos de forma prática. O site, parte integrante do projeto, proporciona uma experiência educacional dinâmica, promovendo o engajamento dos estudantes de maneira autônoma.</p>
                             <p>Este projeto não apenas demonstra a aplicação prática de Python e tecnologias modernas no ensino da matemática, mas também representa um esforço em transformar conceitos abstratos em experiências tangíveis e significativas para os alunos. Ao unir programação, visualização de dados e interatividade, buscamos redefinir a abordagem tradicional do ensino de trigonometria, tornando-o mais atraente e acessível. </p>
                             -->
-              </div>
-            </div>
+              <!-- </div> -->
+            <!-- </div> -->
           </div>
         </section>
         <hr />
 
         <section id="gacv">
           <div class="recurso-container">
-            <h3>GACV (2020-2022)</h3>
-            <!-- <h5>Monitores:</h5> -->
-            <!-- <h6>Data: --/----</h6> -->
-            <div class="recurso-box">
-              <div>
+            <a href="">
+              <h3>GACV (2020-2022)</h3>
+            </a>
+            <h5>Monitores:</h5>
+            <h5>Orientador(es): </h5>
+            <h6>Ano: ----</h6>
+            <!-- <div class="recurso-box"> -->
+              <!-- <div> -->
                 <!-- div importante para manter o float na imagem-->
-                <a href="">
-                  <img
-                    src="../assets/img/img-padrao.bmp"
-                    alt="GACV (2020-2022)"
-                  />
-                </a>
+                <!-- <a href=""> -->
+                  <!-- <img -->
+                    <!-- src="../assets/img/img-padrao.bmp" -->
+                    <!-- alt="GACV (2020-2022)" -->
+                  <!-- /> -->
+                <!-- </a> -->
                 <p class="revisar">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Officiis saepe provident mollitia? Tempora mollitia id libero
@@ -149,23 +146,26 @@
                   cumque illum vel libero aliquid praesentium deleniti autem,
                   rerum commodi, sit vitae? Quia, sed veniam!
                 </p>
-              </div>
-            </div>
+              <!-- </div> -->
+            <!-- </div> -->
           </div>
         </section>
         <hr />
 
         <section id="geog-3d">
           <div class="recurso-container">
-            <h3>Geogebra 3D (2020-2021)</h3>
-            <!-- <h5>Monitores:</h5> -->
-            <!-- <h6>Data: --/----</h6> -->
-            <div class="recurso-box">
-              <div>
+            <a href="">
+                <h3>Geogebra 3D (2020-2021)</h3>
+            </a>
+            <h5>Monitores:</h5>
+            <h5>Orientadores</h5>
+            <h6>Ano: ----</h6>
+            <!-- <div class="recurso-box"> -->
+              <!-- <div> -->
                 <!-- div importante para manter o float na imagem-->
-                <a href="">
-                  <img src="../assets/img/img-padrao.bmp" alt="Geogebra 3D" />
-                </a>
+                <!-- <a href=""> -->
+                  <!-- <img src="../assets/img/img-padrao.bmp" alt="Geogebra 3D" /> -->
+                <!-- </a> -->
                 <p class="revisar">
                   Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                   Corrupti eligendi laborum quae enim harum voluptatem commodi,
@@ -182,8 +182,8 @@
                   dignissimos tempore veritatis expedita harum, asperiores,
                   culpa odit sapiente atque laborum veniam excepturi.
                 </p>
-              </div>
-            </div>
+              <!-- </div> -->
+            <!-- </div> -->
           </div>
         </section>
 
@@ -191,18 +191,21 @@
 
         <section id="novas-tec-ensino">
           <div class="recurso-container">
-            <h3>Novas tecnologias de ensino (2020--)</h3>
-            <!-- <h5>Monitores:</h5> -->
-            <!-- <h6>Data: --/----</h6> -->
-            <div class="recurso-box">
-              <div>
+            <a href="">
+              <h3>Novas tecnologias de ensino (2020--)</h3>
+            </a>
+            <h5>Monitor(es):</h5>
+            <h5>Orientador(es):</h5>
+            <h6>Ano: ----</h6>
+            <!-- <div class="recurso-box"> -->
+              <!-- <div> -->
                 <!-- div importante para manter o float na imagem-->
-                <a href="">
-                  <img
-                    src="../assets/img/img-padrao.bmp"
-                    alt="Novas Tecnologias de Ensino"
-                  />
-                </a>
+                <!-- <a href=""> -->
+                  <!-- <img -->
+                    <!-- src="../assets/img/img-padrao.bmp" -->
+                    <!-- alt="Novas Tecnologias de Ensino" -->
+                  <!-- /> -->
+                <!-- </a> -->
                 <p class="revisar">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Officiis saepe provident mollitia? Tempora mollitia id libero
@@ -219,26 +222,28 @@
                   modi veritatis id, magnam, molestias tenetur. Quae, maiores
                   consequuntur? Alias!
                 </p>
-              </div>
-            </div>
+              <!-- </div> -->
+            <!-- </div> -->
           </div>
         </section>
         <hr />
 
         <section id="disc-dist-soc">
           <div class="recurso-container">
-            <h3>Disciplinas no distanciamento social (2020)</h3>
+            <a href="">
+              <h3>Disciplinas no distanciamento social (2020)</h3>
+            </a>
             <!-- <h5>Monitores:</h5> -->
             <!-- <h6>Data: --/----</h6> -->
-            <div class="recurso-box">
-              <div>
+            <!-- <div class="recurso-box"> -->
+              <!-- <div> -->
                 <!-- div importante para manter o float na imagem-->
-                <a href="">
-                  <img
-                    src="../assets/img/img-padrao.bmp"
-                    alt="Disciplinas no Distanciamento Social"
-                  />
-                </a>
+                <!-- <a href=""> -->
+                  <!-- <img -->
+                    <!-- src="../assets/img/img-padrao.bmp" -->
+                    <!-- alt="Disciplinas no Distanciamento Social" -->
+                  <!-- /> -->
+                <!-- </a> -->
                 <p class="revisar">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Officiis saepe provident mollitia? Tempora mollitia id libero
@@ -259,8 +264,8 @@
                   asperiores adipisci, eum nostrum atque, voluptas quos. Dolor
                   corrupti culpa delectus, ut quam rerum.
                 </p>
-              </div>
-            </div>
+              <!-- </div> -->
+            <!-- </div> -->
           </div>
         </section>
         <!-- <hr> -->
