--- a/pages/livros-eletronicos.html
+++ b/pages/livros-eletronicos.html
@@ -18,34 +18,33 @@
     <main>
 
         <section class="sobre">
-            <h2>Importância dos Livros Eletrônicos</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid ipsam laudantium dolore culpa tempora? Quam quos quae magni soluta ab incidunt veniam, voluptatem hic corporis assumenda maiores atque labore consequuntur!</p>
-            <hr>
-            <div class="apenas-desktop">
-                <h2>Título apenas na versão desktop</h2>
-                <p>Este texto aparece apenas na versão desktop</p>
-            </div>
+            <h2>Livros Eletrônicos</h2>
+<!-- Alterar este texto -->
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate cum praesentium harum nesciunt quas, atque accusamus ad quae ducimus sint corrupti tempore enim. Explicabo nam, atque eum reiciendis quas asperiores.</p>
+            <span class="apenas-desktop">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum cumque hic repellendus unde culpa optio numquam molestias, temporibus adipisci fugiat reprehenderit! Ipsam, nulla molestias mollitia accusantium asperiores quod aliquam quo.</p>
+            </span>
         </section>
 
         <section class="content">
 
-            <h2>Livros Eletrônicos</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate cum praesentium harum nesciunt quas, atque accusamus ad quae ducimus sint corrupti tempore enim. Explicabo nam, atque eum reiciendis quas asperiores.</p>
-            <hr>
+
+            <!-- <hr> -->
 
             <section id="calc-geogebra-v1">
                 <div class="recurso-container">
+                    <div class="recurso-content">
                     <h3>Cálculo com Geobebra 3D vol. I</h3>
-                    <h5>Monitores:Paula Bruna Daco, Raphael Odalvo, João Pedro Teixeira, Júlia Anjos</h5>
-                    <h5>Orientadores: Begoña Alarcón, Carlos Meniño e Cristhabel Vasquez.</h5>
-                    <h6>Data: 2020</h6>
-                    <div class="recurso-descricao">
-                        <div> <!-- div importante para manter o float na imagem-->
-                            <a href="https://www.geogebra.org/m/hzvsftdf">
-                                <img src="../assets/img/calc-varias-var-v1.png" alt="Cálculo com Geogebra 3D vol.I">
-                            </a>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis saepe provident mollitia? Tempora mollitia id libero maxime officia quae dolores nesciunt corrupti! Molestiae, non nulla accusantium fugit dignissimos facilis laborum?</p>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati quas accusantium, explicabo necessitatibus inventore sunt veniam vel corporis ab nam! Sint, molestias dolor impedit quidem id asperiores possimus provident aliquid. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis laborum molestiae, debitis laudantium sunt enim excepturi reprehenderit! Minus eveniet nam repellendus quibusdam. Eaque quod deserunt incidunt nisi obcaecati non molestias?</p>
+                    <div class="recurso-box"> <!-- div importante para manter o float na imagem-->
+                        <a href="https://www.geogebra.org/m/hzvsftdf">
+                            <img src="../assets/img/calc-varias-var-v1.png" alt="Cálculo com Geogebra 3D vol.I">
+                        </a>
+                        <div class="recurso-descricao">
+                            <h5>Monitores: Paula Bruna Daco, Raphael Odalvo, João Pedro Teixeira, Júlia Anjos</h5>
+                            <h5>Orientadores: Begoña Alarcón, Carlos Meniño e Cristhabel Vasquez.</h5>
+                            <h6>Ano: 2020</h6>
+<!-- Descrição do livro -->
+                            <p class="revisar">Breve descrição sobre o livro</p>
                         </div>
                     </div>
                 </div>
@@ -54,18 +53,18 @@
 
             <section id="calc-geogebra-v2">
                 <div class="recurso-container">
-
-                    <h3>Cálculo com Geobebra 3D vol. II</h3>
-                    <h5>Monitores:Paula Bruna Daco, Raphael Odalvo, João Pedro Teixeira, Júlia Anjos</h5>
-                    <h5>Orientadores: Begoña Alarcón, Carlos Meniño e Cristhabel Vasquez.</h5>
-                    <h6>Data: 2020</h6>
-                    <div class="recurso-descricao">
-                        <div> <!-- div importante para manter o float na imagem-->
+                    <div class="recurso-content">
+                        <h3>Cálculo com Geobebra 3D vol. II</h3>
+                        <div class="recurso-box">
                             <a href="https://www.geogebra.org/m/jke7hpfs">
                                 <img src="../assets/img/calc-varias-var-v2.png" alt="Cálculo com Geogebra 3D vol.II">
                             </a>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis saepe provident mollitia? Tempora mollitia id libero maxime officia quae dolores nesciunt corrupti! Molestiae, non nulla accusantium fugit dignissimos facilis laborum?</p>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae aspernatur provident omnis exercitationem ullam repellat cupiditate enim inventore dolores assumenda et praesentium, quos beatae? Alias laboriosam nostrum quidem suscipit omnis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, quae molestiae. Quidem ad sapiente expedita iusto magnam iste eligendi aperiam, optio perspiciatis repudiandae non adipisci possimus consequuntur voluptatem. Aperiam, distinctio.</p>
+                            <div class="recurso-descricao">
+                                <h5>Monitores: Paula Bruna Daco, Raphael Odalvo, João Pedro Teixeira, Júlia Anjos</h5>
+                                <h5>Orientadores: Begoña Alarcón, Carlos Meniño e Cristhabel Vasquez.</h5>
+                                <h6>Ano: 2020</h6>
+                                <p class="revisar">Breve descrição sobre o livro</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -74,18 +73,20 @@
 
             <section id="geom-an-geogebra">
                 <div class="recurso-container">
-
-                    <h3>Geometria Analítica com Geogebra</h3>
-                    <h5>Monitores:Ruan Soares Risso Possas, João Victor da Silvares, Gabriel Felice de Freitas Santos, Raphael Odalvo, João Pedro Teixeira, Maria Luiza Américo, Alan da Silva Gomes </h5>
-                    <h5>Orientadores: Begoña Alarcón, Jones Colombo, Leandro Merlo, Leonardo Silvares e Pablo Barrientos.</h5>
-                    <h6>Data: 2021</h6>
-                    <div class="recurso-descricao">
-                        <div> <!-- div importante para manter o float na imagem-->
+                    <div class="recurso-content">
+                        <h3>Geometria Analítica com Geogebra</h3>
+                        <div class="recurso-box">
                             <a href="https://www.geogebra.org/m/wtmkn9nv">
-                                <img src="../assets/img/ga-cv.png" alt="Geometria Analítica com Geogebra">
+                               <img src="../assets/img/ga-cv.png" alt="Geometria Analítica com Geogebra">
                             </a>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis saepe provident mollitia? Tempora mollitia id libero maxime officia quae dolores nesciunt corrupti! Molestiae, non nulla accusantium fugit dignissimos facilis laborum?</p>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis iste dignissimos veritatis, ducimus modi quis accusantium asperiores minima, eos blanditiis error architecto iusto itaque assumenda cupiditate. Quibusdam harum optio repellendus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus voluptatibus veniam labore excepturi id molestiae dicta facilis, ab harum laborum eveniet accusantium doloribus consectetur, quaerat reiciendis tempora quidem exercitationem sint!</p>
+                            <div class="recurso-descricao">
+                                <h5>Monitores: Ruan Soares Risso Possas, João Victor da Silvares, Gabriel Felice de Freitas Santos, Raphael Odalvo, João Pedro Teixeira, Maria Luiza Américo, Alan da Silva Gomes </h5>
+                                <h5>Orientadores: Begoña Alarcón, Jones Colombo, Leandro Merlo, Leonardo Silvares e Pablo Barrientos.</h5>
+                                <h6>Ano: 2021</h6>
+                                <p class="revisar">Breve descrição sobre o livro</p>
+
+                        
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -94,21 +95,22 @@
 
             <section id="ap-calc-varias-var">
                 <div class="recurso-container">
-                    <h3>Apostila Cálculo Diferencial de Várias Variáveis</h3>
-                    <h5>Monitores:</h5>
-                    <h6>Data: --/----</h6>
-                    <div class="recurso-descricao">
-                        <div> <!-- div importante para manter o float na imagem-->
+                    <div class="recurso-content">
+                        <h3>Apostila Cálculo Diferencial de Várias Variáveis</h3>
+                        <div class="recurso-box">
                             <a href="">
                                 <img src="../assets/img/img-padrao.bmp" alt="Apostila Cálculo Diferencial de Várias Variáveis">
                             </a>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis saepe provident mollitia? Tempora mollitia id libero maxime officia quae dolores nesciunt corrupti! Molestiae, non nulla accusantium fugit dignissimos facilis laborum?</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam fugiat vitae corporis tenetur officia facilis quam alias quis, esse illo itaque provident unde. Ipsum numquam assumenda, facere debitis eum facilis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis dignissimos earum corrupti harum ratione totam consequatur beatae tempore at, aperiam officia minima animi aut quos veritatis blanditiis consectetur. Blanditiis, mollitia.</p>
+                            <div class="recurso-descricao">
+                            <h5>Monitores:</h5>
+                            <h6>Ano: ----</h6>
+                            <p class="revisar">Breve descrição sobre o livro</p>
                         </div>
                     </div>
                 </div>
             </section>
-            <hr>
+
+            <!-- <hr>
 
             <section id="site-calc-1a">
                 <div class="recurso-container">
@@ -117,7 +119,7 @@
                     <h5>Monitores:</h5>
                     <h6>Data: --/----</h6>
                     <div class="recurso-descricao">
-                        <div> <!-- div importante para manter o float na imagem-->
+                        <div>
                             <a href="http://www.gma.uff.br/calculo1a/">
                                 <img src="../assets/img/img-padrao.bmp" alt="Site Cálculo 1A (em andamento)">
                             </a>
@@ -136,7 +138,7 @@
                     <h5>Monitores:</h5>
                     <h6>Data: --/----</h6>
                     <div class="recurso-descricao">
-                        <div> <!-- div importante para manter o float na imagem-->
+                        <div>
                             <a href="">
                                 <img src="../assets/img/img-padrao.bmp" alt="Site Cálculo 2B (em andamento)">
                             </a>
@@ -155,7 +157,7 @@
                     <h5>Monitores:</h5>
                     <h6>Data: --/----</h6>
                     <div class="recurso-descricao">
-                        <div> <!-- div importante para manter o float na imagem-->
+                        <div>
                             <a href="http://www.gma.uff.br/calculo3a/">
                                 <img src="../assets/img/img-padrao.bmp" alt="Site Cálculo 3A (em andamento)">
                             </a>
@@ -164,7 +166,7 @@
                         </div>
                     </div>
                 </div> 
-            </section>
+            </section> -->
 
         </section>      
         
